Fix dark mode

--- a/docs/src/app/(private)/experiments/calendar/calendar.module.css
+++ b/docs/src/app/(private)/experiments/calendar/calendar.module.css
@@ -11,15 +11,15 @@
   --cell-outside-month-color: #cbd5e1;
   --cell-disabled-color: #64748b;
   --cell-current-border-color: #9ca3af;
-}
 
-:global(.mode-dark) .Root {
-  --button-hover-bg-color: #075985;
-  --days-grid-separator-bg-color: #4b5563;
-  --cell-selected-bg-color: #0369a1;
-  --cell-inside-selection-bg-color: #0c4a6e;
-  --cell-outside-month-color: #334155;
-  --cell-disabled-color: #64748b;
+  @media (prefers-color-scheme: dark) {
+    --button-hover-bg-color: #075985;
+    --days-grid-separator-bg-color: #4b5563;
+    --cell-selected-bg-color: #0369a1;
+    --cell-inside-selection-bg-color: #0c4a6e;
+    --cell-outside-month-color: #334155;
+    --cell-disabled-color: #64748b;
+  }
 }
 
 .Root {
